// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StealthCopiable should renders correctly 1`] = `
<DocumentFragment>
  .cache-13zaz9t {
  display: block;
  position: relative;
}

.cache-13zaz9t:hover .elgyjs72 {
  opacity: 1;
  cursor: pointer;
}

.cache-oldbq4 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.cache-1cptxfh {
  background-color: transparent;
  border: none;
  color: #4f0599;
  display: inline-block;
  padding: 0 8px;
  line-height: 1;
  opacity: 0;
  z-index: 100;
}

.cache-1cptxfh:focus {
  opacity: 1;
}

<div
    class="cache-13zaz9t elgyjs70"
  >
    Hello
    <span
      class="cache-oldbq4 elgyjs71"
    >
      <button
        aria-live="polite"
        class="cache-1cptxfh elgyjs72"
        tabindex="0"
        type="button"
      >
        Copy
      </button>
    </span>
  </div>
</DocumentFragment>
`;

exports[`StealthCopiable should renders correctly with a complex children 1`] = `
<DocumentFragment>
  .cache-13zaz9t {
  display: block;
  position: relative;
}

.cache-13zaz9t:hover .elgyjs72 {
  opacity: 1;
  cursor: pointer;
}

.cache-oldbq4 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.cache-1cptxfh {
  background-color: transparent;
  border: none;
  color: #4f0599;
  display: inline-block;
  padding: 0 8px;
  line-height: 1;
  opacity: 0;
  z-index: 100;
}

.cache-1cptxfh:focus {
  opacity: 1;
}

<div
    class="cache-13zaz9t elgyjs70"
  >
    <span
      class="cache-oldbq4 elgyjs71"
    >
      <button
        aria-live="polite"
        class="cache-1cptxfh elgyjs72"
        tabindex="0"
        type="button"
      >
        Copied
      </button>
    </span>
    <div>
      <span>
        Hello
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`StealthCopiable should renders correctly with custom side 1`] = `
<DocumentFragment>
  .cache-13zaz9t {
  display: block;
  position: relative;
}

.cache-13zaz9t:hover .elgyjs72 {
  opacity: 1;
  cursor: pointer;
}

.cache-oldbq4 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.cache-1cptxfh {
  background-color: transparent;
  border: none;
  color: #4f0599;
  display: inline-block;
  padding: 0 8px;
  line-height: 1;
  opacity: 0;
  z-index: 100;
}

.cache-1cptxfh:focus {
  opacity: 1;
}

<div
    class="cache-13zaz9t elgyjs70"
  >
    <span
      class="cache-oldbq4 elgyjs71"
    >
      <button
        aria-live="polite"
        class="cache-1cptxfh elgyjs72"
        tabindex="0"
        type="button"
      >
        Copy
      </button>
    </span>
    Hello
  </div>
</DocumentFragment>
`;

exports[`StealthCopiable should renders correctly with custom side 2`] = `
<DocumentFragment>
  .cache-13zaz9t {
  display: block;
  position: relative;
}

.cache-13zaz9t:hover .elgyjs72 {
  opacity: 1;
  cursor: pointer;
}

.cache-oldbq4 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.cache-1cptxfh {
  background-color: transparent;
  border: none;
  color: #4f0599;
  display: inline-block;
  padding: 0 8px;
  line-height: 1;
  opacity: 0;
  z-index: 100;
}

.cache-1cptxfh:focus {
  opacity: 1;
}

<div
    class="cache-13zaz9t elgyjs70"
  >
    <span
      class="cache-oldbq4 elgyjs71"
    >
      <button
        aria-live="polite"
        class="cache-1cptxfh elgyjs72"
        tabindex="0"
        type="button"
      >
        Copied
      </button>
    </span>
    Hello
  </div>
</DocumentFragment>
`;
